<?xml version="1.0"?>
<package format="3">
	<name>anafi_ros_nodes</name>
	<version>0.3.1</version>
	<description>The anafi_ros_nodes package</description>

	<maintainer email="andriy.sarabakha@ntu.edu.sg">Andriy Sarabakha</maintainer>

	<license>BSD</license>

	<author email="andriy.sarabakha@ntu.edu.sg">Andriy Sarabakha</author>

	<buildtool_depend>ament_cmake_python</buildtool_depend>
    
	<depend>rclpy</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>anafi_ros_interfaces</depend>
	
	<exec_depend>ros2launch</exec_depend>
    
	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
